# hal_rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: dev.rs  gpio.rs  i2cdetect.rs  spi.rs
src/: error.rs  gpio.rs  i2c.rs  lib.rs  spi.rs  uart.rs
src/tests/: test_gpio.rs  test_i2c.rs  test_spi.rs  test_uart.rs
tests/: test_spi.rs
