cargo-features = ["per-package-target"]

[package]
name = "wasm-embedded-hal"
description = "WASM embedded-hal implementation"
repository = "https://github.com/embedded-wasm/hal_rs"
documentation = "https://ryan.kurte.nz/embedded-wasm"
version = "0.4.0"
edition = "2018"
license = "MPL-2.0"

forced-target = "wasm32-wasi"

[features]
test_spi = []
test_i2c = []
test_uart = []
test_gpio = []

tests = [ "test_spi", "test_i2c", "test_gpio", "test_uart" ]

[package.metadata.docs.rs]
# We actually want the wasm32-wasi target but, it's tier two so not supported by docs.rs yet
targets = [ "x86_64-unknown-linux-gnu", "wasm32-wasi" ]

[dependencies]
embedded-hal = "=1.0.0-alpha.8"
wasm-embedded-spec = { version = "0.4.0", default_features = false, features = [ "bind_c" ] }

[[bin]]
name = "test-i2c"
path = "src/tests/test_i2c.rs"
required-features = [ "test_i2c" ]

[[bin]]
name = "test-spi"
path = "src/tests/test_spi.rs"
required-features = [ "test_spi" ]

[[bin]]
name = "test-uart"
path = "src/tests/test_uart.rs"
required-features = [ "test_uart" ]


[[bin]]
name = "test-gpio"
path = "src/tests/test_gpio.rs"
required-features = [ "test_gpio" ]
